-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
6.2
-
None
FAIL! : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Compared values are not the same Actual (process.exitCode()): 255 Expected (0) : 0 Loc: [/home/mitch/dev/qt-6.2/qtdeclarative/tests/auto/qml/qmllint/tst_qmllint.cpp(827)] QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Command: "/home/mitch/dev/qt-6.2-debug/qtbase/bin/qmllint" "/home/mitch/dev/qt-6.2-debug/qtbase/qml/QtQuick/Templates/plugins.qmltypes -I /home/mitch/dev/qt-6.2-debug/qtbase/qml -I /home/mitch/dev/qt-6.2/qtdeclarative/tests/auto/qml/qmllint/data --silent" QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Exit status: QProcess::NormalExit QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Exit code: 255 QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) stderr: "" QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) stdout: "" FAIL! : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Compared values are not the same Actual (process.exitCode()): 255 Expected (0) : 0 Loc: [/home/mitch/dev/qt-6.2/qtdeclarative/tests/auto/qml/qmllint/tst_qmllint.cpp(827)] QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Command: "/home/mitch/dev/qt-6.2-debug/qtbase/bin/qmllint" "/home/mitch/dev/qt-6.2-debug/qtbase/qml/QtQuick/Templates/plugins.qmltypes -I /home/mitch/dev/qt-6.2-debug/qtbase/qml -I /home/mitch/dev/qt-6.2/qtdeclarative/tests/auto/qml/qmllint/data" QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Exit status: QProcess::NormalExit QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) Exit code: 255 QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) stderr: "Warning: /home/mitch/dev/qt-6.2-debug/qtbase/qml/QtQuick/Templates/plugins.qmltypes:5325:47: Binding assigned to \"type\", but no property \"type\" exists in the current element.\n Signal { name: \"activeChanged\"; type: \"bool\" }\n ^^^^^^\nWarning: /home/mitch/dev/qt-6.2-debug/qtbase/qml/QtQuick/Templates/plugins.qmltypes:5326:49: Binding assigned to \"type\", but no property \"type\" exists in the current element.\n Signal { name: \"draggingChanged\"; type: \"bool\" }\n ^^^^^^\n" QDEBUG : TestQmllint::qmltypes(/QtQuick/Templates/plugins.qmltypes) stdout: ""
We need to cherry-pick https://codereview.qt-project.org/c/qt/qtdeclarative/+/357466 to 6.2 and/or remove the bool return type from those signals.
- relates to
-
QTBUG-95173 Merge qtquickcontrols2 into qtdeclarative
-
- Closed
-
For Gerrit Dashboard: QTBUG-95567 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
363152,2 | Add a "type" property to Signal in qmltypes | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
363154,2 | QQuickSelectionRectangle: remove bool return type from signals | dev | qt/qtquickcontrols2 | Status: ABANDONED | +2 | 0 |
363195,2 | QQuickSelectionRectangle: remove bool return type from signals | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
363269,3 | QQuickSelectionRectangle: remove bool return type from signals | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |