QQuickSelectionRectangle: remove bool return type from signals

They don't make sense and cause the qmllint tests to fail
when merging qtquickcontrols2.

Task-number: QTBUG-95567
Change-Id: I9dcb92f9b0fd8f5a901c90247ad6428a0acb8b7e
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit f59d1176ea8fa212d08fed2cbffe8ac47a3d7700)
Reviewed-by: Lars Knoll <lars.knoll@qt.io>